@@ -2,16 +2,17 @@ package org.egov.helper;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.FileUtils;
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.common.contract.request.Role;
 import org.egov.common.contract.request.User;
 import org.egov.common.contract.response.ResponseInfo;
 import org.egov.web.models.*;
 
-import java.io.File;
 import java.math.BigDecimal;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -64,8 +65,8 @@ public class MusterRollRequestBuilderTest {
 
         try {
             ObjectMapper objectMapper = new ObjectMapper();
-            File file = new File("src/test/resources/MusterRollMDMSData.json");
-            String exampleRequest = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+            Path path = Paths.get("src/test/resources/MusterRollMDMSData.json");
+            String exampleRequest = Files.readString(path, StandardCharsets.UTF_8);
             mdmsResponse = objectMapper.readValue(exampleRequest, Object.class);
         } catch (Exception exception) {
             log.error("CalculationServiceTest::getMdmsResponse::Exception while parsing mdms json");
@@ -79,8 +80,8 @@ public class MusterRollRequestBuilderTest {
 
         try {
             ObjectMapper objectMapper = new ObjectMapper();
-            File file = new File("src/test/resources/TenantMDMSData.json");
-            String exampleRequest = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+            Path path = Paths.get("src/test/resources/TenantMDMSData.json");
+            String exampleRequest = Files.readString(path, StandardCharsets.UTF_8);
             mdmsResponse = objectMapper.readValue(exampleRequest, Object.class);
         } catch (Exception exception) {
             log.error("CalculationServiceTest::getMdmsResponse::Exception while parsing mdms json");
